--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="maininfo">
         <h1>
-            This is the official page of Pique Blinders. Here you can find all the information about Pique Blinders.
+            This is the official page of Pique Blinders. Here can you find all the information about Pique Blinders.
         </h1>
     </div>
 
